--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 
     	<section id="info">
     		<div id="source">
-    			<div id="mail"></div>
-    			<div id="git"><a href="https://github.com/splincode"></a></div>
+    			<div id="git"><a href="https://github.com/splincodewd"></a></div>
     			<div id="you"><a target="blank" href="http://youtube.com/c/splincodewd"></a></div>
-    			<div id="vk"><a target="blank" href="http://vk.com/splincode"></a></div>
+    			<div id="vk"><a target="blank" href="https://vk.com/splincode_wd"></a></div>
     		</div>
-    		<div id="num"  data-mail="omaxphp@yandex.ru">+7 (965) 215 70 85</div>
+    		<div id="num">https://github.com/splincodewd</div>
     	</section>
 
 		<div  class="lefter">
